[package]
name = "booru-rs"
version = "0.2.7"
edition = "2021"
description = "An async Booru client for Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru-rs"
repository = "https://github.com/ajiiisai/booru-rs"
readme = "README.md"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
async-trait = "0.1.59"
