[package]
name = "booru-rs"
version = "0.3.1"
edition = "2024"
rust-version = "1.92"
description = "An async Booru client for Rust"
license = "MIT"
documentation = "https://docs.rs/booru-rs"
repository = "https://github.com/ajiiisai/booru-rs"
readme = "README.md"

[features]
default = ["danbooru", "gelbooru", "safebooru", "rule34"]
danbooru = []
gelbooru = []
safebooru = []
rule34 = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs", "sync", "io-util"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures-core = "0.3.31"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
